--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div class="intro-text">
             <div class="intro-lead-in">Un environnement virtuel pour la médecine</div>
             <div class="intro-heading">Voici Virtual Shopping !</div>
-            <a href="#services" class="page-scroll btn btn-xl">C'est quoi ?</a>
+            <a href="#services" class="page-scroll btn btn-xl">C'est quoi ?</a>&nbsp;&nbsp;&nbsp;
+            <a href="Rapport.pdf" class="page-scroll btn btn-xl">Télécharger le rapport</a>
         </div>
     </div>
 </header>
